# dtoa-benchmark

./: Cargo.toml  README.md
.github/workflows/: ci.yml
chart/: performance.tex
fpfmt/: Cargo.toml  README.md
fpfmt/src/: lib.rs  pow10.rs
fpfmt/tests/: test.rs
src/: args.rs  data.rs  main.rs  traits.rs  verify.rs
